--- a/quanx_rewrite.conf
+++ b/quanx_rewrite.conf
@@ -22,17 +22,20 @@ hostname=qidian.qpic.cn,ulogs.umeng.com,ulogs.umengcloud.com,alogs.umeng.com,alo
 ^https?:\/\/.*\.kuwo\.cn/vip/v2/user/vip url script-response-body https://raw.githubusercontent.com/yxiaocai/quanx/master/js/kuwovip.js
 ^https?:\/\/musicpay\.kuwo\.cn/ url response-body "vip" response-body "song"
 ^https?://vip1\.kuwo\.cn/vip/spi/mservice url script-response-body https://raw.githubusercontent.com/yxiaocai/quanx/master/js/kuwovip2.js
+
+; 去微信公众号底部广告(Choler)
+
+^https?://mp.weixin.qq.com/mp/getappmsgad url script-response-body https://Choler.github.io/Surge/Script/WeChat.js
+
+
 ; 2019年3月18日 21:12
 
 ;【Settings】——【Favorites】——【+】——【Rejection】，输入名字（随意），填上链接地址，勾选Including Host Names。找到选项，左滑选择【Replace】，然后【OK】。
 
 
-
 ;rewrite
 
 ; TikTok
-
-
 
 ;^*.bdimg.com header-del Referer
 ;^*.qpic.cn header-replace User-Agent WeChat/6.5.22.32 CFNetwork/889.9 Darwin/17.2.0
