--- a/quanxRewrite.conf
+++ b/quanxRewrite.conf
@@ -1,4 +1,4 @@
-hostname = *.iydsj.com,*.k.sohu.com,*.kakamobi.cn,*.kingsoft-office-service.com,*.meituan.net,*.musical.ly,*.ofo.com,*.pstatp.com,*.snssdk.com,*.uve.weibo.com,*.ydstatic.com,a.apicloud.com,a.qiumibao.com,a.sfansclub.com,a.wkanx.com,acs.m.taobao.com,act.vip.iqiyi.com,api.21jingji.com,api.caijingmobile.com,api.chelaile.net.cn,api.daydaycook.com.cn,api.gotokeep.com,api.haohaozhu.cn,api.huomao.com,api.intsig.net,api.izuiyou.com,api.jr.mi.com,api.jxedt.com,api.kkmh.com,api.m.jd.com,api.mgzf.com,api.psy-1.com,api.rr.tv,api.smzdm.com,api.tv.sohu.com,api.vistopia.com.cn,api.wallstreetcn.com,api.xiachufang.com,api.zhihu.com,api.zhuishushenqi.com,api*.tiktokv.com,api5.futunn.com,api-mifit*.huami.com,api-release.wuta-cam.com,app.58.com,app.api.ke.com,app.bilibili.com,api.douban.com,app.mixcapp.com,app.variflight.com,app.wy.guahao.com,app.yinxiang.com,b.zhuishushenqi.com,c.m.163.com,cap.caocaokeji.cn,capi.mwee.cn,cdn.moji.com,channel.beitaichufang.com,clientaccess.10086.cn,client.mail.163.com,cms.daydaycook.com.cn,consumer.fcbox.com,creditcard.ecitic.com,daoyu.sdo.com,dxy.com,e.dangdang.com,easyreadfs.nosdn.127.net,gateway.shouqiev.com,guide-acs.m.taobao.com,gw.alicdn.com,gw-passenger.01zhuanche.com,huichuan.sm.cn,i.weread.qq.com,i.ys7.com,iapi.bishijie.com,iface.iqiyi.com,ih2.ireader.com,img01.10101111cdn.com,img*.doubanio.com,img.jiemian.com,interface.music.163.com,ios.lantouzi.com,ios.wps.cn,m*.amap.com,m.client.10010.com,m.creditcard.ecitic.com,m.ibuscloud.com,m.poizon.com,m.yap.yahoo.com,mapi.mafengwo.cn,media.qyer.com,mlife.cmbchina.com,mlife.jf365.boc.cn,mob.mddcloud.com.cn,mp.weixin.qq.com,mrobot.pcauto.com.cn,mrobot.pconline.com.cn,ms.jr.jd.com,msspjh.emarbox.com,newsso.map.qq.com,nnapp.cloudbae.cn,open.qyer.com,pic1cdn.cmbchina.com,pic*.chelaile.net,portal-xunyou.qingcdn.com,pss.txffp.com,r.inews.qq.com,render.alipay.com,resrelease.wuta-cam.com,richmanapi.jxedt.com,rtbapi.douyucdn.cn,service.4gtv.tv,smkmp.96225.com,slapi.oray.net,snailsleep.net,sp.kaola.com,ss0.bdstatic.com,ssl.kohsocialapp.qq.com,static.vuevideo.net,static1.keepcdn.com,status.boohee.com,support.you.163.com,s.youtube.com,thor.weidian.com,tiku.zhan.com,weibointl.api.weibo.cn,www.dandanzan.com,www.flyertea.com,www.youtube.com,www.zhihu.com,www.zybang.com,youtubei.googleapis.com,zhidao.baidu.com
+hostname = *.iydsj.com,*.k.sohu.com,*.kakamobi.cn,*.kingsoft-office-service.com,*.meituan.net,*.musical.ly,*.ofo.com,*.pstatp.com,*.snssdk.com,*.uve.weibo.com,*.ydstatic.com,*pi.feng.com,4gimg.map.qq.com,a.apicloud.com,a.qiumibao.com,a.sfansclub.com,a.wkanx.com,acs.m.taobao.com,act.vip.iqiyi.com,api.21jingji.com,api.caijingmobile.com,api.chelaile.net.cn,api.daydaycook.com.cn,api.gotokeep.com,api.haohaozhu.cn,api.huomao.com,api.intsig.net,api.izuiyou.com,api.jr.mi.com,api.jxedt.com,api.kkmh.com,api.m.jd.com,api.mgzf.com,api.psy-1.com,api.rr.tv,api.smzdm.com,api.tv.sohu.com,api.vistopia.com.cn,api.wallstreetcn.com,api.xiachufang.com,api.zhihu.com,api.zhuishushenqi.com,api*.tiktokv.com,api5.futunn.com,api-mifit*.huami.com,api-release.wuta-cam.com,app.58.com,app.api.ke.com,app.bilibili.com,api.douban.com,app.mixcapp.com,app.variflight.com,app.wy.guahao.com,app.yinxiang.com,b.zhuishushenqi.com,c.m.163.com,cap.caocaokeji.cn,capi.mwee.cn,cdn.moji.com,channel.beitaichufang.com,clientaccess.10086.cn,client.mail.163.com,cms.daydaycook.com.cn,consumer.fcbox.com,creditcard.ecitic.com,daoyu.sdo.com,dxy.com,e.dangdang.com,easyreadfs.nosdn.127.net,gateway.shouqiev.com,guide-acs.m.taobao.com,gw.alicdn.com,gw-passenger.01zhuanche.com,huichuan.sm.cn,i.weread.qq.com,i.ys7.com,iapi.bishijie.com,iface.iqiyi.com,ih2.ireader.com,img01.10101111cdn.com,img*.doubanio.com,img.jiemian.com,interface.music.163.com,ios.lantouzi.com,ios.wps.cn,m*.amap.com,m.client.10010.com,m.creditcard.ecitic.com,m.ibuscloud.com,m.poizon.com,m.yap.yahoo.com,mapi.mafengwo.cn,media.qyer.com,mlife.cmbchina.com,mlife.jf365.boc.cn,mob.mddcloud.com.cn,mp.weixin.qq.com,mrobot.pcauto.com.cn,mrobot.pconline.com.cn,ms.jr.jd.com,msspjh.emarbox.com,newsso.map.qq.com,nnapp.cloudbae.cn,open.qyer.com,pic1cdn.cmbchina.com,pic*.chelaile.net,portal-xunyou.qingcdn.com,pss.txffp.com,r.inews.qq.com,render.alipay.com,restapi.iyunmai.com,resrelease.wuta-cam.com,richmanapi.jxedt.com,rtbapi.douyucdn.cn,service.4gtv.tv,smkmp.96225.com,slapi.oray.net,snailsleep.net,sp.kaola.com,ss0.bdstatic.com,ssl.kohsocialapp.qq.com,static.vuevideo.net,static1.keepcdn.com,status.boohee.com,support.you.163.com,s.youtube.com,thor.weidian.com,tiku.zhan.com,weibointl.api.weibo.cn,www.bodivis.com.cn,www.dandanzan.com,www.flyertea.com,www.youtube.com,www.zhihu.com,www.zybang.com,youtubei.googleapis.com,zhidao.baidu.com
 
 # Redirect Google Search Service
 ^https?:\/\/(www.)?(g|google)\.cn url 302 https://www.google.com
@@ -22,7 +22,7 @@ hostname = *.iydsj.com,*.k.sohu.com,*.kakamobi.cn,*.kingsoft-office-service.com,
 # 0~9
 # A
 # > Alibaba
-^https?:\/\/gw\.alicdn\.com\/tfs\/.+-\d{4}\.jpg url reject-img
+^https?:\/\/gw\.alicdn\.com\/.*\.jpg_(9\d{2}|\d{4}) url reject-img
 # > APICloud
 ^https?:\/\/a\.apicloud\.com\/start_page\/ url reject-img
 
@@ -59,7 +59,7 @@ hostname = *.iydsj.com,*.k.sohu.com,*.kakamobi.cn,*.kingsoft-office-service.com,
 # > China Merchants Bank
 ^https?:\/\/www\.cmbc\.com\.cn\/m\/image\/loadingpage\/ url reject-img
 # > China Guangfa Bank
-^https?:\/\/mps\.95508\.com\/mps\/club\/cardPortals\/adv\/\d\.(png|jpg) url reject-img
+^https?:\/\/mps\.95508\.com\/mps\/club\/cardPortals\/adv\/.{25}\.jpg url reject-img
 # > China Mobile
 ^https?:\/\/clientaccess\.10086\.cn\/biz-orange\/DN\/init\/startInit url reject-img
 # > China Unicom
@@ -115,6 +115,7 @@ hostname = *.iydsj.com,*.k.sohu.com,*.kakamobi.cn,*.kingsoft-office-service.com,
 ^https?:\/\/api\.m\.jd.com\/client\.action\?functionId=(start|queryMaterialAdverts) url reject-img
 ^https?:\/\/(bdsp-x|dsp-x)\.jd\.com\/adx\/ url reject-img
 ^https?:\/\/ms\.jr\.jd\.com\/gw\/generic\/base\/na\/m\/adInfo url reject-img
+^https?:\/\/ms\.jr\.jd\.com\/gw\/generic\/aladdin\/na\/m\/getLoadingPicture url reject-img
 # > 驾校一点通
 ^https?:\/\/api\.jxedt\.com\/ad\/ url reject-img
 ^https?:\/\/richmanapi\.jxedt\.com\/api\/ad\/ url reject-img
