--- a/quanxJs.conf
+++ b/quanxJs.conf
@@ -2,7 +2,7 @@ hostname=*.zhihu.com,i.weread.qq.com,vira.llsapp.com,p.du.163.com,*.kuwo.cn,mp.w
 
 ; 英语流利说
 ;^https?://vira.llsapp.com/api/v2/readings/limitation url response-body .* response-body .
-^https?://vira.llsapp.com/api/v2/readings/limitation url reject-dict
+^https?://vira.llsapp.com/api/v2/readings/limitation url response-body .* response-body {}
 
 ; 知乎跳转 PC 版
 ^https://(www\.)?zhihu.com/ url request-header \r\nUser-Agent:.+\r\n request-header \r\nUser-Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_11_1) AppleWebKit/537.36 (KHTML, like Gecko)  Chrome/71.0.3578.98 Safari/537.36\r\n
